feat: Added Grp5 READme.md

--- a/migrations/README
+++ b/migrations/README
@@ -1,1 +1,90 @@
-Single-database configuration for Flask.
+# RayGen Solar Solutions
+
+*Date:* 2024/08/15  
+*By:*  
+1. Grace Ngure  
+2. Charity Wanjiku  
+3. Victor Wahinya  
+4. Ian Kagari  
+5. Aaron Omuhinda  
+6. Liz Wachira
+
+## Project Overview
+
+Solar lighting is becoming increasingly important as more people seek sustainable and cost-effective energy solutions. In many regions, particularly in rural and off-grid areas, access to reliable and affordable lighting is a significant challenge. Traditional lighting methods, such as kerosene lamps, are not only expensive but also pose health risks due to smoke and potential fire hazards. Solar lighting offers a clean, renewable, and economical alternative, providing much-needed lighting to households, businesses, and public spaces.
+
+To address this need, RayGen Solar Solutions is a web application dedicated to solar lighting solutions. This platform will enable customers to explore various solar lighting products, understand their benefits, and make informed purchasing decisions. Additionally, it will assist the company in managing their inventory, tracking orders, and offering customer support through user reviews.
+
+## Problem Statement
+
+Currently, many solar lighting providers struggle with manual processes that hinder their ability to efficiently manage inventory, track sales, and provide timely customer support. Customers often lack access to comprehensive information about available solar lighting products, making it challenging for them to choose the best options for their needs. As a result, the adoption of solar lighting solutions is slower than it could be, leaving many without access to this sustainable technology.
+
+RayGen Solar Solutions aims to resolve these issues by centralizing information about solar lighting products, streamlining the sales process, and providing a platform for customer support. By leveraging this technology, customers can easily access the information and products they need.
+
+## Minimum Viable Product (MVP)
+
+RayGen Solar Solutions web application includes the following features:
+
+### User Authentication
+- Admin has access to all CRUD methods using the ADMIN Dashboard which entails Customers, Products, Orders, and Reviews.
+- Users can register, log in as customers, and receive a registration verification code upon sign-up before proceeding.
+
+### Admin Features
+- *Admin Dashboard*: Create new solar lighting products, including specifications, price, and order availability (stock-in/out).
+- *Admin Dashboard*: Manage inventory, including adding, updating, or deleting products.
+- *Admin Dashboard*: Monitor Products, customers, Orders and Reviews.
+
+### Customer Features
+- *Homepage*: Customers can browse available solar lighting products and view detailed information about each product.
+- *Cart and Checkout*: Customers can make a purchase, edit, delete, and view solar lighting product orders. Afterwards they can add their reviews.
+- *User Profile*: Customers can edit personally identifiable information (PII).
+
+### Customer Reviews
+- Interface to add reviews to solar lighting product orders.
+
+## Technologies
+
+- *Backend*: Flask
+- *Database*: SQLAlchemy
+- *Wireframes*: Figma (GUI-graphical user interface design)
+- *Frontend*: React
+- *Frontend Styling*: CSS/Bootstrap/MUI
+
+## Installation
+### Backend
+To run the backend locally, follow these steps:
+
+1. Clone the repository:  
+   git clone https://github.com/gracengure/RayGen_Solar_Backend
+2. Navigate into the project directory:  
+   cd RayGen_Solar_Backend
+3. Install dependencies:  
+   pipenv install && pipenv shell
+4. Run migrations:  
+   flask db upgrade
+5. Start the server:  
+   flask run or python app.py
+
+### Frontend
+To run the frontend locally, follow these steps:
+
+1. Clone the repository:  
+   git clone https://github.com/gracengure/RayGen-_Solar_Frontend
+2. Navigate into the project directory:  
+   cd RayGen-_Solar_Frontend
+3. Install dependencies:  
+   npm install
+4. Start the development server:  
+   npm run dev
+5. Open your browser and visit [http://localhost:5173] to view the application.
+
+## Support and Contact Details
+
+For support or inquiries, please visit:  
+- Frontend Repository: [RayGen Solar Systems Frontend Repository](https://github.com/gracengure/RayGen-_Solar_Frontend)  
+- Backend Repository: [RayGen Solar Systems Backend Repository](https://github.com/gracengure/RayGen_Solar_Backend)
+
+## License
+
+The content of this site is licensed under the MIT license.  
+Copyright (c) 2024.
